# CANStang

./: .gitignore  README.md  ReadMe.md
Architecture/: can_arch.md
Arduino_Transmit/Transmit_R4/: Transmit_R4.ino
Code/: .mxproject  Code.ioc  Makefile
Code/Core/Inc/: fdcan.h  led.h  main.h  main_entry.h  ssd1306.h  ssd1306_conf.h
Code/Core/Src/: fdcan.c  gpio.c  i2c.c  led.c  main.c  main_entry.c  ssd1306.c  stm32g4xx_it.c  tim.c  usart.c
IDReader/: .gitignore  CMakeLists.txt  main.c
IDReader/documents/: colorpalettes.md
IDReader/main_app/: CMakeLists.txt  main.c
IDReader/main_app/include/clay/: clay.h  multi-compilation-unit.c
IDReader/main_app/include/dir_test/: dirtest.c  dirtest.h
IDReader/main_app/include/serial_read/: serial_read.c  serial_read.h
project_plan/: plan.md
project_plan/images/: .$High-level-Architecture.png.bkp
